--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '3'
 services:
   book_catalog:
-    image: book_catalog:1
+    image: book_catalog:v1
     build:
       context: ./book_catalog
       dockerfile: Dockerfile
@@ -14,7 +14,7 @@ services:
     - DATABASE_URL=postgresql://sit722_7_2p_5w04_user:DfYz0iMBvwTwxUltA6XVgL0fcm2wBlyd@dpg-cs37lud6l47c73ebb9b0-a.oregon-postgres.render.com/sit722_7_2p_5w04
 
   inventory_management:
-    image: inventory_management:1
+    image: inventory_management:v1
     build:
       context: ./inventory_management
       dockerfile: Dockerfile
